fix disk size label bleed

--- a/scss/manager.scss
+++ b/scss/manager.scss
@@ -705,7 +705,7 @@ footer {
 }
 
 .rc-slider {
-    margin-bottom: 2rem;
+    margin-bottom: 0.75rem;
 }
 
 .rc-tooltip {
